[gd_scene load_steps=3 format=3 uid="uid://lobby_ui_ec2"]

[ext_resource type="Script" path="res://scripts/ui/lobby.gd" id="1_lobby"]
[ext_resource type="PackedScene" uid="uid://customize_menu_ec2" path="res://scenes/ui/customize_menu.tscn" id="2_customize"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_lobby")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = 180.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "EC2 SPACE COMBAT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="AddressLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Server Address:"

[node name="AddressInput" type="LineEdit" parent="Panel/VBoxContainer"]
layout_mode = 2
placeholder_text = "127.0.0.1"
alignment = 1

[node name="Spacer2" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="HostButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "HOST GAME"

[node name="JoinButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "JOIN GAME"

[node name="CustomizeButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "CUSTOMIZE"

[node name="Spacer3" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="StatusLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = ""
horizontal_alignment = 1

[node name="CustomizeMenu" parent="." instance=ExtResource("2_customize")]
visible = false

[connection signal="pressed" from="Panel/VBoxContainer/HostButton" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/JoinButton" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/CustomizeButton" to="." method="_on_customize_pressed"]

